--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>  
+<html lang="en">  
   <head>
+    <meta charset="utf-8">
+    <title>Styles Conference</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <a class="btn btn-danger">Button</a>
-    <a class="btn btn-success">Button</a>
+    <h1>Styles Conference</h1>
+    <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
   </body>
 </html>
